# SoftBodySimulation

./: .clang-format  CMakeLists.txt  README.md  SoftSim.sln  main.cpp
SoftSim/: SoftSim.vcxproj  SoftSim.vcxproj.filters  imgui.ini
assets/Shader/: particle.frag  particle.vert  render.frag  render.vert  shadow.vert  skybox.frag  skybox.vert
src/: gfx.h  simulation.h  util.h
src/gfx/: camera.cpp  camera.h  graphic.cpp  graphic.h  shader.cpp  shader.h  texture.cpp  texture.h
src/simulation/: cube.cpp  cube.h  integrator.cpp  integrator.h  massSpringSystem.cpp  massSpringSystem.h  particle.cpp  particle.h  spring.cpp  spring.h  terrain.cpp  terrain.h
src/util/: clock.cpp  clock.h  exporter.cpp  exporter.h  filesystem.cpp  filesystem.h  helper.cpp  helper.h
utility/: gen_video.bat
